[project]
name = "vzlotn-ae-cap-1-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "langchain-tools>=0.1.34",
    "langgraph>=1.1.0",
    "openai>=2.24.0",
    "pypdf>=6.7.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ratelimit>=2.2.1",
    "reportlab>=4.4.10",
    "ruff>=0.15.4",
    "streamlit>=1.54.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "types-ratelimit>=2.2.0.20250501",
    "types-reportlab>=4.4.10.20260408",
]
